# personal-finance-tracker

./: .gitignore  README.md  clean.sh  pyproject.toml  run.sh
scripts/: dev.sh  extract_folder_to_csv.py  statement_analytics.py  statement_audit.py  test_ocr_backends_mac.py
src/personal_finance/: analytics.py  app.py  categories.py  config.py  extraction_merge.py  jobs.py  merchant_aliases.py  ocr.py  pipeline.py  statement_coverage.py  statement_totals_reconcile.py  transaction_overrides.py
src/personal_finance/parsers/: rbc.py  rbc_pdf.py
src/personal_finance/static/: app.js  styles.css
src/personal_finance/templates/: index.html
