[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "personalfinance"
version = "0.1.0"
description = "Household finance ingestion, reconciliation, and dashboarding for RBC statements."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "aiofiles>=24.1.0",
  "cryptography>=43.0.0",
  "fastapi>=0.116.0",
  "jinja2>=3.1.6",
  "pandas>=2.2.3",
  "pypdf>=5.0.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
# MinerU base wheel does not install VLM/pipeline engines; extras are required for local OCR.
# mlx enables vlm-mlx-engine on Apple Silicon (skipped on non-mac by optional resolution).
ocr = [
  "loguru>=0.7.3",
  "mineru[pipeline,vlm]>=3.0.0,<4",
  "mineru[mlx]>=3.0.0,<4; sys_platform == 'darwin'",
]

[tool.hatch.build.targets.wheel]
packages = ["src/personal_finance"]

[tool.uv]
package = true
